# qtcamera

./: CMakeLists.txt  mainwindow.h  qtcamera.pro
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
